Improved object merging for local file settings, added global ToC title setting, fixed debounce logic

--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,9 @@
     font-size: larger;
     font-weight: bolder;
 }
+
+.setting-title {
+    display: flex;
+    justify-content: center;
+    font-size: xx-large;
+}
